prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/sema_errors/duplicate_key.diag.txt
ERROR: duplicate key 'a'
testData/diagnostics/compilation_errors/sema_errors/duplicate_key.nut:4:4

    a = 1,
    a = 2
    ^
}


